tests/snapshots/array_types.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
small_array[0]=1&
small_array[1]=2&
small_array[2]=3&
string_array[0]=first&
string_array[1]=second
