tests/snapshots/array_types@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
small_array%5B0%5D=1&
small_array%5B1%5D=2&
small_array%5B2%5D=3&
string_array%5B0%5D=first&
string_array%5B1%5D=second
