tests/snapshots/basic_enum_types-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
unit%5BUnitVariant%5D&
newtype%5BNewtypeVariant%5D=hello&
tuple%5BTupleVariant%5D%5B0%5D=42&
tuple%5BTupleVariant%5D%5B1%5D=true&
struct_variant%5BStructVariant%5D%5Bx%5D=3.14&
struct_variant%5BStructVariant%5D%5By%5D=test&
vec_of_enums%5B0%5D%5BUnitVariant%5D&
vec_of_enums%5B1%5D%5BNewtypeVariant%5D=in%20vec
