tests/snapshots/basic_enum_types@form.snap
---
source: tests/test_roundtrip.rs
description: "EnumContainer { unit: Unit, newtype: Newtype(\"hello\"), tuple: Tuple(42, true), struct_variant: Struct { x: 3.14, y: \"test\" }, vec_of_enums: [Unit, Newtype(\"in vec\")] }"
---
unit%5BUnit%5D&
newtype%5BNewtype%5D=hello&
tuple%5BTuple%5D%5B0%5D=42&
tuple%5BTuple%5D%5B1%5D=true&
struct_variant%5BStruct%5D%5Bx%5D=3.14&
struct_variant%5BStruct%5D%5By%5D=test&
vec_of_enums%5B0%5D%5BUnit%5D&
vec_of_enums%5B1%5D%5BNewtype%5D=in%20vec
