tests/snapshots/btree_map_types.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
ordered_map[alpha]=1&
ordered_map[beta]=2&
ordered_map[gamma]=3&
nested_map[empty]&
nested_map[first][x]=foo&
nested_map[first][y]=bar&
nested_map[second][a]=baz
