tests/snapshots/btree_map_types@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
ordered_map%5Balpha%5D=1&
ordered_map%5Bbeta%5D=2&
ordered_map%5Bgamma%5D=3&
nested_map%5Bempty%5D=&
nested_map%5Bfirst%5D%5Bx%5D=foo&
nested_map%5Bfirst%5D%5By%5D=bar&
nested_map%5Bsecond%5D%5Ba%5D=baz
